kubernetes/komga/tachidesk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tachidesk
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tachidesk
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name:  tachidesk
    spec:
      containers:
      - name:  tachidesk
        imagePullPolicy: Always
        image:  tachidesk
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 300m
            memory: 1G
        ports:
        - containerPort:  4567
          name:  tachidesk
        volumeMounts:
        - name: data
          mountPath: /home/suwayomi/.local/share/Tachidesk
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName:  data
      restartPolicy: Always
